# Phone-Assistant

./: .env.example  .gitignore  App.tsx  README.md  audio-utils.ts  file-utils.ts  index.html  list_bidi_v1beta.cjs  list_devices.py  list_realtime_models.cjs  list_realtime_models_v1alpha.cjs  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_gemini_2_5_preview.cjs  test_rates.py  tsconfig.app.tsbuildinfo  types.ts  verify_frontend.py  verify_textarea.py  vitest.config.mjs
cli/: package-lock.json  package.json  test-electron.js  test-electron.ts
cli/src/: audio-router.ts  cli.ts  gemini-session.ts  list-devices.ts  test-audio.ts  test-gemini-diag.ts  test-gemini.ts
components/: AudioVisualizer.tsx
coverage/: index.html
coverage/src/: App.tsx.html  i18n.ts.html  (+2 more)
docs/: ADD.md  ADD.zh.md  MDD.md  MDD.zh.md  README.zh.md  algorithm_description.md  algorithm_description.zh.md  architecture_and_modules.md  architecture_and_modules.zh.md  audio_and_websocket_flow.md  audio_and_websocket_flow.zh.md  skill_evaluation_report.md  skill_evaluation_report.zh.md  skill_module_implementation.md  skill_module_implementation.zh.md  skill_module_plan.zh.md  ui_design_principles.md  ui_design_principles.zh.md  user_requirements.md  user_requirements.zh.md
electron-app/: .env.example  README.md  build.js  package-lock.json  package.json  tsconfig.json
src/: App.test.tsx  App.tsx  guidance.json  i18n.test.ts  i18n.ts  index.css  skills.ts  voices.ts
tests/: test_audio_io.py  test_domain_logic.py  test_gemini_multimodal.py
(+64 files in other folders)
